@@ -1,3 +1,9 @@
+2007-11-14  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* src/Makefile, NEWS: Add a suidperms variable. This should ease
+	the change of permission of suid binaries for distributors (not
+	recommended).
+
 2007-11-10  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* ./, libmisc/, src/, contrib/, doc/, lib/, man/, man/sv/,
